--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Document</title>
     <!-- <script type="text/javascript" src="second/popper.min.js"></script> -->
-     <link rel="stylesheet" type="text/css" href="yahya.css">  
+     <link rel="stylesheet" type="text/css" href="style.css">  
 </head>
 <body>
 
